Corrigiendo problemas de Ionic

--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -61,7 +61,7 @@
                 <ion-icon slot="start" name="logo-youtube"></ion-icon> Video
               </ion-button>
               <br>
-              <ion-button href="https://gitlab.com/JovannyRch/tablasdeverdad-ionic" fill="clear" color="vibrant">
+              <ion-button href="https://github.com/JovannyRch/tablas_de_verdad" fill="clear" color="vibrant">
                 <ion-icon slot="start" name="logo-github"></ion-icon> Codigo Fuente
               </ion-button>
               <br />
