--- a/src/app/pages/resultado/resultado.page.html
+++ b/src/app/pages/resultado/resultado.page.html
@@ -1,9 +1,192 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>resultado</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content *ngIf="!guardarEnNube">
+  <div *ngIf="ok" class="ion-padding" id="solucion">
+    <ion-item>
 
-<ion-content>
+      <ion-chip (click)="regresar()" color="vibrant">
+        <ion-icon style="zoom:1.5;" name="arrow-back-outline"></ion-icon>
+      </ion-chip>
 
+
+    </ion-item>
+    <!--
+          <ion-button (click)="saveImg()" color="success">
+          <ion-icon slot="icon-only" name="camera"></ion-icon>
+        </ion-button>
+        -->
+    <div class="ion-text-right">
+      <ion-chip class="ion-text-center"
+        style="border-radius: 10px; border: 1px solid rgb(221, 109, 44); padding-left: 3%;" (click)="guardarExp()"
+        color="vibrant">
+        <ion-label>
+          <ion-icon slot="start" name="save"></ion-icon>
+        </ion-label>
+      </ion-chip>
+
+      <ion-chip class="ion-text-center"
+        style="border-radius: 10px; border: 1px solid rgb(221, 109, 44); padding-left: 3%;"
+        (click)="activarGuardarEnNube()" color="vibrant">
+        <ion-label>
+          <ion-icon name="cloud-circle" style="zoom:1.5;"></ion-icon>
+
+        </ion-label>
+      </ion-chip>
+      <!--  <ion-chip style="font-size:12px" routerLink="/about" color="vibrant">
+        Contactame
+      </ion-chip> -->
+    </div>
+
+    <br>
+    <div class="ion-text-center">
+      <ion-button href="https://play.google.com/store/apps/details?id=com.jovannyrch.tablasdeverdad" fill="clear"
+        color="vibrant">
+        <ion-icon slot="start" name="star"></ion-icon> Califica la app
+      </ion-button>
+    </div>
+    <div class="ion-text-center">
+      <ion-button href="https://www.facebook.com/groups/297802774663043" fill="clear" color="vibrant">
+        <ion-icon name="logo-facebook"></ion-icon> ¿Dudas? unete al grupo
+      </ion-button>
+    </div>
+
+
+
+    <div *ngIf="desc">
+      <br>
+      <small><i>Descripción:</i></small>
+      <p>{{desc}}</p>
+    </div>
+
+    <br>
+    <i>La proposición es una <b>{{diagnostico}}</b></i>
+    <br>
+    <ion-item class="ion-text-center">
+      <ion-label><b>{{infijaOrg}}</b></ion-label>
+    </ion-item>
+
+
+
+    <ion-grid fixed class="ion-text-center">
+
+      <ion-row>
+        <ion-col size="12">
+          <ion-button (click)="cambiar01()" color="light">
+            <span *ngIf="!conVsFs">0/1</span>
+            <span *ngIf="conVsFs">V/F</span>
+          </ion-button>
+        </ion-col>
+
+      </ion-row>
+
+
+      <table>
+        <thead>
+          <th *ngFor="let variable of variables">{{variable}}</th>
+          <th style="font-size: 0.7em;">Resultado</th>
+        </thead>
+        <tbody>
+          <tr *ngFor="let fila of tabla">
+            <td *ngFor="let c of fila">{{checkChange01(c)}}</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <br />
+      <i *ngIf="suma || multiplicacion"><small>Proposiciones equivalentes</small></i>
+      <ion-item *ngIf="suma">
+        <ion-label class="ion-text-center"><b>{{ suma }}</b></ion-label>
+      </ion-item>
+      <ion-item *ngIf="multiplicacion">
+        <ion-label class="ion-text-center"><b>{{ multiplicacion }}</b></ion-label>
+      </ion-item>
+
+      <ion-row>
+        <ion-col size="12">
+          <br><br>
+          <ion-chip class="ion-text-center"
+            style="border-radius: 10px; border: 1px solid rgb(221, 109, 44); padding-left: 3%;"
+            (click)="fMostrarProceso()" color="vibrant">
+            <ion-label class="ion-text-center">
+              <span *ngIf="!mostrarProceso">Mostrar proceso</span>
+              <span *ngIf="mostrarProceso">Ocultar proceso</span>
+            </ion-label>
+          </ion-chip>
+
+
+
+
+        </ion-col>
+      </ion-row>
+
+    </ion-grid>
+
+
+
+    <div *ngIf="mostrarProceso ">
+
+      <ion-grid fixed class="ion-text-center" *ngFor="let p of proceso;let i=index" style="margin-top: 10px;">
+        <i style="font-size: 0.8em;"><i>Paso {{i+1}}:</i> <b> {{ p.nombre }}</b></i>
+        <table size="12">
+
+          <thead>
+            <th *ngFor="let operando of p.operandos">
+              {{ operando }}
+            </th>
+            <th> <b [innerHtml]="safeHtml(p.html)"></b></th>
+          </thead>
+          <tbody>
+            <tr *ngFor="let v of p.tabla;let i = index">
+              <td>
+                {{ checkChange01(diccionarioOperaciones[p.operandos[0]][i]) }}
+              </td>
+              <td *ngIf="p.operandos.length == 2">
+                {{ checkChange01(diccionarioOperaciones[p.operandos[1]][i]) }}
+              </td>
+              <td> {{checkChange01(v)}}</td>
+            </tr>
+          </tbody>
+        </table>
+
+
+      </ion-grid>
+
+    </div>
+
+
+
+
+
+  </div>
+</ion-content>
+
+<ion-content *ngIf="guardarEnNube" class="ion-padding">
+  <div class="ion-text-center">
+    <b>Subir a la nube</b>
+  </div>
+  <ion-grid fixed>
+    <ion-row class="ion-text-center">
+      <ion-col size="12">
+        <i>Expresión:</i> <br> <b>{{infijaOrg}}</b>
+      </ion-col>
+      <ion-col size="12" class="ion-text-center">
+        <ion-item>
+          <ion-textarea rows="2" cols="20" [(ngModel)]="descripcion" placeholder="Ingresa una descripción...">
+          </ion-textarea>
+        </ion-item>
+
+        <ion-chip style="border-radius: 10px; border: 1px solid rgb(221, 109, 44); padding-left: 3%;"
+          (click)="activarGuardarEnNube()" color="vibrant">
+          <ion-label>
+            Cancelar
+          </ion-label>
+        </ion-chip>
+        <ion-chip style="border-radius: 10px; border: 1px solid rgb(221, 109, 44); padding-left: 3%;"
+          (click)="guardarDB()" color="vibrant">
+          <ion-label>
+            <ion-icon name="cloud-upload" style="zoom:1.5;"></ion-icon>
+            Subir
+          </ion-label>
+        </ion-chip>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
