Configuraciones generales de la app

--- a/src/app/pages/resultado/resultado.page.html
+++ b/src/app/pages/resultado/resultado.page.html
@@ -44,7 +44,12 @@
     </div>
     <div class="ion-text-center">
       <ion-button href="https://www.facebook.com/groups/297802774663043" fill="clear" color="vibrant">
-        <ion-icon name="logo-facebook"></ion-icon> ¿Dudas? unete al grupo
+        <ion-icon slot="start" name="logo-facebook"></ion-icon> ¿Dudas? unete al grupo
+      </ion-button>
+    </div>
+    <div class="ion-text-center">
+      <ion-button (click)="mostrarVideo()" fill="clear" color="vibrant">
+        <ion-icon slot="start" name="cash-outline"></ion-icon> Apoyame dando clic en el anuncio
       </ion-button>
     </div>
 
