--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -48,8 +48,8 @@
               <br /> -->
 
               Mira mis demás applicaciones <br>
-              <ion-button color="vibrant"
-                href="https://play.google.com/store/apps/developer?id=J19+%26+JM+Studios&hl=es" fill="clear">
+              <ion-button color="vibrant" href="https://play.google.com/store/apps/dev?id=7909952332792194347&hl"
+                fill="clear">
                 <ion-icon slot="start" name="md-appstore"></ion-icon>
                 PLAYSTORE
               </ion-button>
