Versión en ingles

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -26,9 +26,9 @@
           <ion-chip style="font-size:12px" routerLink="/repositorio" color="vibrant">
             <ion-icon style="zoom:1.5;" name="cloud" style="zoom:1.5;"></ion-icon>
           </ion-chip>
-          <ion-chip style="font-size:12px" routerLink="/temas" color="vibrant">
+          <!--  <ion-chip style="font-size:12px" routerLink="/temas" color="vibrant">
             <ion-icon style="zoom:1.5;" name="book" style="zoom:1.5;"></ion-icon>
-          </ion-chip>
+          </ion-chip> -->
           <ion-chip style="font-size:12px" routerLink="/about" color="vibrant">
             <ion-icon style="zoom:1.5;" name="information" style="zoom:1.5;"></ion-icon>
           </ion-chip>
