--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -29,17 +29,17 @@
                 </b></h3>
               <br>
 
-              <ion-button href="https://play.google.com/store/apps/details?id=com.jovannyrch.tablasdeverdad"
+              <ion-button href="https://play.google.com/store/apps/details?id=com.jovannyrch.tablasdeverdad.en"
                 fill="clear" color="vibrant">
-                <ion-icon slot="start" name="star"></ion-icon> Califica la app
+                <ion-icon slot="start" name="star"></ion-icon> Rate App
               </ion-button>
 
               <br>
-              Colaboradores: <br>
+              <!-- Colaboradores: <br>
               <b>Octavio Alvarado Salas</b>
               <p><small>Profesor de Matemáticas de Costa Rica</small></p>
               <p><i><small>* Corrección en la operación de disyunción exclusiva</small></i></p>
-              <hr>
+              <hr> -->
 
               <!-- <br>¿Algún error o sugerencia? Contactame <br>
               <ion-button href="https://wa.me/527226227577" fill="clear" color="vibrant">
@@ -47,7 +47,7 @@
               </ion-button>
               <br /> -->
 
-              Mira mis demás applicaciones <br>
+              My other apps <br>
               <ion-button color="vibrant" href="https://play.google.com/store/apps/dev?id=7909952332792194347&hl"
                 fill="clear">
                 <ion-icon slot="start" name="md-appstore"></ion-icon>
@@ -55,14 +55,13 @@
               </ion-button>
               <br />
 
-
-              ¿Cómo se hizo la app?<br>
+              How did I build the app?<br>
               <ion-button href="https://www.youtube.com/watch?v=anGBK3crHes" fill="clear" color="vibrant">
                 <ion-icon slot="start" name="logo-youtube"></ion-icon> Video
               </ion-button>
               <br>
               <ion-button href="https://github.com/JovannyRch/tablas_de_verdad" fill="clear" color="vibrant">
-                <ion-icon slot="start" name="logo-github"></ion-icon> Codigo Fuente
+                <ion-icon slot="start" name="logo-github"></ion-icon> Source Code
               </ion-button>
               <br />
               <br />
