--- a/src/app/pages/contenido/contenido.page.html
+++ b/src/app/pages/contenido/contenido.page.html
@@ -34,7 +34,7 @@
         </tr>
         <tr>
           <td>
-            ∨
+            T
           </td>
         </tr>
         <tr>
@@ -72,18 +72,18 @@
           </tr>
           <tr>
             <td>F</td>
-            <td>V</td>
+            <td>T</td>
             <td>F</td>
           </tr>
           <tr>
-            <td>V</td>
+            <td>T</td>
             <td>F</td>
             <td>F</td>
           </tr>
           <tr>
-            <td>V</td>
-            <td>V</td>
-            <td>V</td>
+            <td>T</td>
+            <td>T</td>
+            <td>T</td>
           </tr>
         </tbody>
       </table>
@@ -113,18 +113,18 @@
           </tr>
           <tr>
             <td>F</td>
-            <td>V</td>
-            <td>V</td>
+            <td>T</td>
+            <td>T</td>
           </tr>
           <tr>
-            <td>V</td>
+            <td>T</td>
             <td>F</td>
-            <td>V</td>
+            <td>T</td>
           </tr>
           <tr>
-            <td>V</td>
-            <td>V</td>
-            <td>V</td>
+            <td>T</td>
+            <td>T</td>
+            <td>T</td>
           </tr>
         </tbody>
       </table>
@@ -147,10 +147,10 @@
         <tbody>
           <tr>
             <td>F</td>
-            <td>V</td>
+            <td>T</td>
           </tr>
           <tr>
-            <td>V</td>
+            <td>T</td>
             <td>F</td>
           </tr>
 
@@ -177,22 +177,22 @@
           <tr>
             <td>F</td>
             <td>F</td>
-            <td>V</td>
+            <td>T</td>
           </tr>
           <tr>
             <td>F</td>
-            <td>V</td>
-            <td>V</td>
+            <td>T</td>
+            <td>T</td>
           </tr>
           <tr>
-            <td>V</td>
+            <td>T</td>
             <td>F</td>
             <td>F</td>
           </tr>
           <tr>
-            <td>V</td>
-            <td>V</td>
-            <td>V</td>
+            <td>T</td>
+            <td>T</td>
+            <td>T</td>
           </tr>
         </tbody>
       </table>
@@ -217,22 +217,22 @@
           <tr>
             <td>F</td>
             <td>F</td>
-            <td>V</td>
+            <td>T</td>
           </tr>
           <tr>
             <td>F</td>
-            <td>V</td>
+            <td>T</td>
             <td>F</td>
           </tr>
           <tr>
-            <td>V</td>
+            <td>T</td>
             <td>F</td>
             <td>F</td>
           </tr>
           <tr>
-            <td>V</td>
-            <td>V</td>
-            <td>V</td>
+            <td>T</td>
+            <td>T</td>
+            <td>T</td>
           </tr>
         </tbody>
       </table>
@@ -256,21 +256,21 @@
           <tr>
             <td>F</td>
             <td>F</td>
-            <td>V</td>
+            <td>T</td>
           </tr>
           <tr>
             <td>F</td>
-            <td>V</td>
-            <td>V</td>
+            <td>T</td>
+            <td>T</td>
           </tr>
           <tr>
-            <td>V</td>
+            <td>T</td>
             <td>F</td>
-            <td>V</td>
+            <td>T</td>
           </tr>
           <tr>
-            <td>V</td>
-            <td>V</td>
+            <td>T</td>
+            <td>T</td>
             <td>F</td>
           </tr>
         </tbody>
@@ -294,21 +294,21 @@
           <tr>
             <td>F</td>
             <td>F</td>
-            <td>V</td>
+            <td>T</td>
           </tr>
           <tr>
             <td>F</td>
-            <td>V</td>
+            <td>T</td>
             <td>F</td>
           </tr>
           <tr>
-            <td>V</td>
+            <td>T</td>
             <td>F</td>
             <td>F</td>
           </tr>
           <tr>
-            <td>V</td>
-            <td>V</td>
+            <td>T</td>
+            <td>T</td>
             <td>F</td>
           </tr>
         </tbody>
@@ -320,9 +320,8 @@
   <div class="ion-padding" style="min-height: 100vh; background-color: rgb(255, 253, 249); text-align: justify;"
     *ngIf="index == 8">
     <p>
-      Es equivalente al "NO ES IGUAL A".
-      Por ejemplo Verdad XOR Falso sería Verdad. Será verdadero cuando los dos operadores son diferetes y falso cuando
-      los dos son iguales.
+      Exclusive Disjunction/XOR
+      The statement A ⊕ B is true when either A or B, but not both, are true. A ⊻ B means the same.
     </p>
     <div style="margin: 0 auto">
       <table>
@@ -339,17 +338,17 @@
           </tr>
           <tr>
             <td>F</td>
-            <td>V</td>
-            <td>V</td>
+            <td>T</td>
+            <td>T</td>
           </tr>
           <tr>
-            <td>V</td>
+            <td>T</td>
             <td>F</td>
-            <td>V</td>
+            <td>T</td>
           </tr>
           <tr>
-            <td>V</td>
-            <td>V</td>
+            <td>T</td>
+            <td>T</td>
             <td>F</td>
           </tr>
         </tbody>
