--- a/src/app/pages/memoria/memoria.page.html
+++ b/src/app/pages/memoria/memoria.page.html
@@ -5,7 +5,7 @@
 
   </ion-chip>
   <br><br>
-  <i>Click para ver la tabla</i>
+  <i>Click on logical function</i>
   <ion-list>
     <ion-item *ngFor="let e of expresionesGuardadas; let i=index" (click)="verResultado(e)"
       [ngStyle]="{'background-color: red;': i%2 == 0}">
@@ -21,7 +21,7 @@
     <ion-toolbar>
       <ion-title>
         <ion-chip style="font-size:12px" routerLink="/about" color="vibrant">
-          Acerca de ...
+          About ...
         </ion-chip>
       </ion-title>
     </ion-toolbar>
