--- a/src/app/pages/repositorio/repositorio.page.html
+++ b/src/app/pages/repositorio/repositorio.page.html
@@ -7,7 +7,7 @@
         </ion-chip>
       </ion-col>
       <ion-col size="8">
-        <h4>Repositorio</h4>
+        <h4>Logical Functions Cloud Storage</h4>
       </ion-col>
     </ion-row>
   </ion-grid>
