--- a/src/app/pages/resultado/resultado.page.html
+++ b/src/app/pages/resultado/resultado.page.html
@@ -37,19 +37,19 @@
 
     <br>
     <div class="ion-text-center">
-      <ion-button href="https://play.google.com/store/apps/details?id=com.jovannyrch.tablasdeverdad" fill="clear"
+      <ion-button href="https://play.google.com/store/apps/details?id=com.jovannyrch.tablasdeverdad.en" fill="clear"
         color="vibrant">
-        <ion-icon slot="start" name="star"></ion-icon> Califica la app
+        <ion-icon slot="start" name="star"></ion-icon> Rate app
       </ion-button>
     </div>
     <div class="ion-text-center">
       <ion-button href="https://www.facebook.com/groups/297802774663043" fill="clear" color="vibrant">
-        <ion-icon slot="start" name="logo-facebook"></ion-icon> ¿Dudas? unete al grupo
+        <ion-icon slot="start" name="logo-facebook"></ion-icon> Join to our FB group
       </ion-button>
     </div>
     <div class="ion-text-center">
       <ion-button (click)="mostrarVideo()" fill="clear" color="vibrant">
-        <ion-icon slot="start" name="cash-outline"></ion-icon> Apoyame dando clic en el anuncio
+        <ion-icon slot="start" name="cash-outline"></ion-icon> Support me clicking on ad
       </ion-button>
     </div>
 
@@ -59,7 +59,7 @@
       <ion-button fill="clear" color="vibrant">
         <ion-icon slot="start" name="camera"></ion-icon>
         <br />
-        Capturando solución :D
+        Sharing results :D
       </ion-button>
     </div>
   </div>
@@ -71,18 +71,18 @@
 
     <div *ngIf="desc">
       <br>
-      <small><i>Descripción:</i></small>
+      <small><i>Description:</i></small>
       <p>{{desc}}</p>
     </div>
 
-    <br>
-    <i>La proposición es una <b>{{diagnostico}}</b></i>
+
     <br>
     <ion-item class="ion-text-center">
       <ion-label><b>{{infijaOrg}}</b></ion-label>
     </ion-item>
 
-
+    <br>
+    <i>Is a <b>{{diagnostico}}</b></i>
 
     <ion-grid fixed class="ion-text-center">
 
@@ -90,21 +90,21 @@
         <ion-col size="12">
           <ion-button (click)="cambiar01()" color="light">
             <span *ngIf="!conVsFs">0/1</span>
-            <span *ngIf="conVsFs">V/F</span>
+            <span *ngIf="conVsFs">T/F</span>
           </ion-button>
         </ion-col>
 
       </ion-row>
       <div class="ion-text-right" *ngIf="!compartiendo">
         <ion-button (click)="capturarSolucion()" fill="clear" color="vibrant">
-          <ion-icon slot="start" name="share-social-sharp"></ion-icon> Compartir
+          <ion-icon slot="start" name="share-social-sharp"></ion-icon> Share
         </ion-button>
       </div>
 
       <table>
         <thead>
           <th *ngFor="let variable of variables">{{variable}}</th>
-          <th style="font-size: 0.7em;">Resultado</th>
+          <th style="font-size: 0.7em;">Result</th>
         </thead>
         <tbody>
           <tr *ngFor="let fila of tabla">
@@ -114,7 +114,7 @@
       </table>
 
       <br />
-      <i *ngIf="suma || multiplicacion"><small>Proposiciones equivalentes</small></i>
+      <i *ngIf="suma || multiplicacion"><small>Reduced expression</small></i>
       <ion-item *ngIf="suma">
         <ion-label class="ion-text-center"><b>{{ suma }}</b></ion-label>
       </ion-item>
@@ -129,8 +129,8 @@
             style="border-radius: 10px; border: 1px solid rgb(221, 109, 44); padding-left: 3%;"
             (click)="fMostrarProceso()" color="vibrant">
             <ion-label class="ion-text-center">
-              <span *ngIf="!mostrarProceso">Mostrar proceso</span>
-              <span *ngIf="mostrarProceso">Ocultar proceso</span>
+              <span *ngIf="!mostrarProceso">Show process</span>
+              <span *ngIf="mostrarProceso">Hide process</span>
             </ion-label>
           </ion-chip>
         </ion-col>
@@ -144,7 +144,7 @@
     <div *ngIf="mostrarProceso ">
 
       <ion-grid fixed class="ion-text-center" *ngFor="let p of proceso;let i=index" style="margin-top: 10px;">
-        <i style="font-size: 0.8em;"><i>Paso {{i+1}}:</i> <b> {{ p.nombre }}</b></i>
+        <i style="font-size: 0.8em;"><i>Step {{i+1}}:</i> <b> {{ p.nombre }}</b></i>
         <table size="12">
 
           <thead>
@@ -177,7 +177,7 @@
       <br>
       <img src="/assets/img/icon.png" height="40px">
       <br />
-      <b>Tablas de Verdad</b>
+      <b>Truth Tables</b>
       <br />
       <b><i>J19 Software</i></b>
       <small>
@@ -194,30 +194,30 @@
 
 <ion-content *ngIf="guardarEnNube" class="ion-padding">
   <div class="ion-text-center">
-    <b>Subir a la nube</b>
+    <b>Cloud uploading</b>
   </div>
   <ion-grid fixed>
     <ion-row class="ion-text-center">
       <ion-col size="12">
-        <i>Expresión:</i> <br> <b>{{infijaOrg}}</b>
+        <i>Logical function:</i> <br> <b>{{infijaOrg}}</b>
       </ion-col>
       <ion-col size="12" class="ion-text-center">
         <ion-item>
-          <ion-textarea rows="2" cols="20" [(ngModel)]="descripcion" placeholder="Ingresa una descripción...">
+          <ion-textarea rows="2" cols="20" [(ngModel)]="descripcion" placeholder="Type a description...">
           </ion-textarea>
         </ion-item>
 
         <ion-chip style="border-radius: 10px; border: 1px solid rgb(221, 109, 44); padding-left: 3%;"
           (click)="activarGuardarEnNube()" color="vibrant">
           <ion-label>
-            Cancelar
+            Cancel
           </ion-label>
         </ion-chip>
         <ion-chip style="border-radius: 10px; border: 1px solid rgb(221, 109, 44); padding-left: 3%;"
           (click)="guardarDB()" color="vibrant">
           <ion-label>
             <ion-icon name="cloud-upload" style="zoom:1.5;"></ion-icon>
-            Subir
+            Upload
           </ion-label>
         </ion-chip>
       </ion-col>
