--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,12 +1,12 @@
 .btn{
   padding-top: 5%;
- 
-  height: 6.4vh;
+
   font-size: 1.5em;
   padding-left: 4%;
   border-radius: 5px;
   vertical-align: middle;
   text-align: center;
+  
 }
 
 .btn:hover{
@@ -84,3 +84,40 @@ ion-chip{
   --background: red;
   color: green;
 }
+
+
+#main-container{
+  width: 100%;
+  height: 100%;
+  min-width: 320px;
+  max-width: 567px;
+  margin: 0 auto;
+}
+
+
+.no-scroll {
+  --overflow: hidden;
+}
+
+/* Mobile mode */
+@media only screen and (max-device-width: 667px) and (min-device-width: 320px) and (orientation: landscape){
+  .btn{
+    height: 2vh;
+  }
+}
+
+/* Desktop mode */
+@media only screen and (min-device-width: 667px) {
+
+  #main-container{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+}
+
+
+
+
