--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,9 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+body{
+  background-color: #FFFDF9;
+}
 
 .ion-color-vibrant {
     --ion-color-base: rgb(245, 147, 55);
