--- a/src/app/pages/repositorio/repositorio.page.html
+++ b/src/app/pages/repositorio/repositorio.page.html
@@ -2,7 +2,7 @@
   <ion-grid no-padding>
     <ion-row>
       <ion-col size="4">
-        <ion-chip routerDirection="back" routerLink="/home" color="vibrant">
+        <ion-chip routerDirection="back" routerLink="/" color="vibrant">
           <ion-icon style="zoom:1.5;" name="arrow-back-outline"></ion-icon>
         </ion-chip>
       </ion-col>
