--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -120,7 +120,9 @@ ion-chip{
 
 
 @media(prefers-color-scheme: dark) {
- 
+  .ion-page{
+    background-color: #000 !important;
+  }
   .btn{
     color: #cecece;
     background-color: black;
